feat(tasks): implement full task CRUD with modal-based editing  - Add task creation and editing using a shared modal - Implement task listing with dynamic rendering from backend - Add edit and delete actions with icon-based controls - Manage application state for selected task editing - Integrate frontend with REST API (GET, POST, PUT, DELETE)

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -59,7 +59,7 @@
 
                     <fieldset>
 
-                        <legend>Add New Task</legend>
+                        <legend></legend>
 
                         <label for="titleOfTask" >Title of task</label>
                         <input type="text" id="titleOfTask" name="titleOfTask" required>
@@ -68,7 +68,7 @@
 
                         <button type="button" id="saveButton">Save</button>
 
-                        <button type="button" id="deleteButton">Delete</button>
+                        <button type="button" id="closeModalButton">Close</button>
 
                     </fieldset>
 
@@ -84,7 +84,8 @@
 
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/task.js"></script>
 
 </body>
 
